# switchbrew

./: .gitignore  .gitmodules  Cargo.toml  cross.txt  devkitpro.txt  justfile  meson.build  meson.options  rust-toolchain.toml
.cargo/: config.toml
.github/: pre-commit-config.yaml
scripts/: bundle.sh
subprojects/libdeko3d-dkp/: meson.build
subprojects/libnx-dkp/: meson.build  meson.options
subprojects/nx-alloc/: Cargo.toml  alloc_override.ld  meson.build
subprojects/nx-alloc/include/: nx_alloc.h
subprojects/nx-alloc/src/: ffi.rs  global.rs  lib.rs  llalloc.rs  llffalloc.rs  sync.rs
subprojects/nx-arm/: Cargo.toml  meson.build
subprojects/nx-arm/include/: nx_arm_counter.h
subprojects/nx-arm/src/: counter.rs  lib.rs
subprojects/nx-cpu/: Cargo.toml  meson.build
subprojects/nx-cpu/include/: nx_cpu_counter.h
subprojects/nx-cpu/src/: barrier.rs  control_regs.rs  counter.rs  ffi.rs  lib.rs  tls.rs
subprojects/nx-hbmenu-launch/: Cargo.toml  hbmenu_launch_override.ld  meson.build
subprojects/nx-hbmenu-launch/src/: lib.rs
subprojects/nx-rand/: Cargo.toml  meson.build  rand_override.ld
subprojects/nx-rand/include/: nx_rand.h
subprojects/nx-rand/src/: ffi.rs  lib.rs  sys.rs
subprojects/nx-std/: Cargo.toml  meson.build  meson.options
subprojects/nx-std-sync/: Cargo.toml  meson.build
subprojects/nx-std-sync/include/: nx_sync_oneshot.h
subprojects/nx-std-sync/src/: condvar.rs  lib.rs  mutex.rs  result.rs  rwlock.rs  semaphore.rs
subprojects/nx-std-sync/src/ffi/: oneshot.rs
subprojects/nx-std-thread/: Cargo.toml
subprojects/nx-std/src/: lib.rs
subprojects/nx-svc/: Cargo.toml  meson.build
subprojects/nx-svc/src/: debug.rs  error.rs  ffi.rs  handle.rs  lib.rs  mem.rs  misc.rs  panic_handler.rs  raw.rs  result.rs  sync.rs  thread.rs
subprojects/nx-svc/src/mem/: core.rs  shmem.rs  tmem.rs
subprojects/nx-sync/: Cargo.toml  meson.build  sync_redirect.ld
subprojects/nx-sync/include/: nx_sync_condvar.h  nx_sync_mutex.h
subprojects/nx-sync/src/: barrier.rs  condvar.rs  lib.rs  mutex.rs  rwlock.rs  semaphore.rs  sys.rs
subprojects/nx-sync/src/ffi/: barrier.rs  condvar.rs  mutex.rs  rwlock.rs  semaphore.rs
subprojects/nx-sync/src/sys/: barrier.rs  condvar.rs  mutex.rs  rwlock.rs  semaphore.rs
subprojects/nx-sync/src/sys/switch/: condvar.rs  mutex.rs  rwlock.rs
subprojects/nx-sys-mem/: Cargo.toml  meson.build  sys_mem_override.ld
subprojects/nx-sys-mem/include/: nx_shmem.h  nx_tmem.h
subprojects/nx-sys-mem/src/: buf.rs  lib.rs  shmem.rs  stack.rs  tmem.rs  vmm.rs
subprojects/nx-sys-mem/src/shmem/: ffi.rs  sys.rs
subprojects/nx-sys-mem/src/tmem/: ffi.rs  sys.rs
subprojects/nx-sys-mem/src/vmm/: ffi.rs  sys.rs
subprojects/nx-sys-sync/: Cargo.toml
subprojects/nx-sys-sync/src/: condvar.rs  lib.rs  mutex.rs  once.rs  remutex.rs  rwlock.rs  tls.rs
subprojects/nx-sys-thread/: Cargo.toml  sys_thread_override.ld
subprojects/nx-sys-thread/src/: ffi.rs  init.rs  lib.rs  registry.rs  slots.rs  thread_impl.rs  thread_info.rs  tls.rs  tls_block.rs  tls_region.rs
subprojects/nx-sys-thread/src/ffi/: libsysbase_nanosleep.rs  libsysbase_pthread.rs  libsysbase_sleep.rs  libsysbase_usleep.rs  newlib_nanosleep.rs  newlib_pthread.rs  newlib_sleep.rs  newlib_usleep.rs  slots.rs  thread.rs  thread_activity.rs  thread_context.rs  thread_create.rs  thread_info.rs  thread_slots.rs  thread_wait.rs  tls.rs
subprojects/nx-sys-thread/src/thread_impl/: activity.rs  context.rs  create.rs  info.rs  list.rs  slots.rs  stackmem.rs  wait.rs
subprojects/nx-thread/: Cargo.toml  meson.build  thread_redirect.ld
subprojects/nx-thread-tls/: Cargo.toml  meson.build  thread_tls_redirect.ld
subprojects/nx-thread-tls/include/: nx_thread_tls.h
subprojects/nx-thread-tls/src/: ffi.rs
subprojects/nx-thread/include/: nx_thread_tls.h  nx_thread_virtmem.h
subprojects/nx-thread/src/: ffi.rs  lib.rs  raw.rs  sys.rs  virtmem.rs
subprojects/nx-thread/src/sys/: tls.rs
subprojects/nx-thread/src/virtmem/: core.rs  ffi.rs  mod.rs  sys.rs
subprojects/nx-time/: Cargo.toml  meson.build
subprojects/nx-time/include/: nx_time_sys_clock.h
subprojects/nx-time/src/: common.rs  ffi.rs  lib.rs  sys.rs
subprojects/nx-time/src/sys/: clock.rs  nsec.rs  timespec.rs
subprojects/nx-time/src/sys/clock/: aarch64.rs  service.rs
subprojects/tests/: meson.build
subprojects/tests/source/: harness.h  main.c
subprojects/tests/source/rand/: test_0001_rand_get_fills_buffers_with_random_data.c  test_0002_rand_get64_returns_different_values.c
subprojects/tests/source/sync/: barrier.c  barrier.h  mutex.c  mutex.h  rwlock.c  rwlock.h  semaphore.c  semaphore.h  suite.h
subprojects/tests/source/sync/barrier/: test_0001_barrier_sync_multiple_threads.c
subprojects/tests/source/sync/condvar/: test_0001_condvar_basic_wait_wake_one.c  test_0002_condvar_wait_timeout_expiry.c  test_0003_condvar_wait_wake_all.c  test_0004_condvar_sequential_wait_signal.c
subprojects/tests/source/sync/mutex/: test_0001_mutex_lock_unlock_single_thread.c  test_0002_mutex_two_threads_no_lock_overlap.c  test_0003_mutex_two_threads_with_lock_overlap.c  test_0004_mutex_multiple_threads_same_priority.c  test_0005_mutex_multiple_threads_different_priority.c
subprojects/tests/source/sync/rwlock/: test_0001_rwlock_read_lock_single_thread.c  test_0002_rwlock_write_lock_single_thread.c  test_0003_rwlock_multiple_readers_concurrent.c  test_0004_rwlock_write_lock_exclusive.c  test_0005_rwlock_reader_writer_priority.c  test_0006_rwlock_try_operations.c  test_0007_rwlock_write_first_unlock.c  test_0008_rwlock_reads_first_unlock.c  test_0009_rwlock_mixed_unlock_order.c  test_0010_rwlock_ownership_checks.c
subprojects/tests/source/sync/semaphore/: test_0001_semaphore_wait_signal_single_thread.c  test_0002_semaphore_multiple_threads_initial_count.c  test_0003_semaphore_producer_consumer.c
