[workspace]
resolver = "2"
members = [
    "subprojects/nx-cpu",
    "subprojects/nx-svc",
    "subprojects/nx-sync",
    "subprojects/nx-thread",
    "subprojects/nx-thread-tls",
    "subprojects/nx-time",
    "subprojects/nx-rand",
]


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
