[workspace]
resolver = "2"
members = [
    "subprojects/nx-alloc",
    "subprojects/nx-cpu",
    "subprojects/nx-rand",
    "subprojects/nx-std-sync",
    "subprojects/nx-svc",
    "subprojects/nx-sync",
    "subprojects/nx-thread",
    "subprojects/nx-thread-tls",
    "subprojects/nx-time",
]


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
