[package]
name = "nx-hbmenu-launch"
version = "0.1.0"
edition = "2024"

[lib]
name = "nx_hbmenu_launch"
crate-type = ["rlib", "staticlib"]
test = false
doctest = false
bench = false

[features]
# Enable the __nx_hbmenu_launch FFI
ffi = []

[dependencies]
nx-svc = { version = "0.1.0", path = "../nx-svc" }
