[package]
name = "nx-time"
version = "0.1.0"
edition = "2024"

[lib]
name = "nx_time"
crate-type = ["rlib", "staticlib"]
test = false
doctest = false
bench = false

[dependencies]
nx-cpu = { version = "0.1.0", path = "../nx-cpu" }
panic-abort = "0.3.2"
panic-halt = "1.0.0"
static_assertions = "1.1.0"
thiserror = { version = "2.0.11", default-features = false }
